css/mobile.css
@media(max-width:500px){
 
 
  #navbar{
    padding: 1.75rem 5%;
    justify-content: center;
  }
  #navbar .logo{
    display: none;
  }
  #showcase .showcase-content{
    align-items: center;
    text-align: center;

    margin-top: -73px;
  }
  #projects .two-buttons{
    display: block;
  }
  #projects  .two-buttons .my-btn{
   width: 100%;
  
  }
  #projects  .two-buttons .my-btn:first-child{
    margin-bottom: .4rem;
   }
}
@media(max-width:768px){


  #skills .items{
    grid-template-columns: repeat(2,1fr);
    grid-row-gap: 1rem;
  }

  #projects .projects{
    grid-template-columns:1fr;
  }

 


.popup-content{
  width: 90%;
}

.contact-info{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
align-items: center;
}


.popup-content{
  flex-direction: column;
  align-items: center;
 
  }

  /* changing order */

.popup-right{
  order: 1;
  padding: 1rem;
}

.popup-left{
  order: 2;
}

